@@ -112,6 +112,26 @@ task runStartUpCheck(type: Test) {
     outputs.upToDateWhen { false }
 }
 
+task runTestWithJava17(type: Test) {
+    jvmArgs '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
+    group 'integration tests'
+    description "Check that the API Mediation Layer is up and running using Java 17"
+
+    systemProperties System.properties
+    useJUnitPlatform {
+        includeTags 'StartupCheck'
+    }
+    outputs.upToDateWhen { false }
+}
+
 task runLocalIntegrationTests(type: Test) {
     group "Integration tests"
     description "Run integration tests that are not dependent on mainframe"
